# ckanext-login-throttle

./: 404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  test.ini
.github/workflows/: test.yml
ckanext/login_throttle/: authenticator.py  cli.py  config.py  config_declaration.yaml  login_throttle.py  mailer.py  plugin.py
ckanext/login_throttle/assets/: script.js  webassets.yml
ckanext/login_throttle/logic/: action.py  auth.py
ckanext/login_throttle/templates/login_throttle/emails/: lockout_mail.txt
ckanext/login_throttle/tests/: conftest.py  test_authenticator.py  test_plugin.py
ckanext/login_throttle/tests/logic/: test_action.py
config_settings/: index.html
docs/: config_settings.md  index.md  installation.md
installation/: index.html
search/: search_index.json
